--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,25 @@
         android:theme="@style/Theme.Alicisindan"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".SignUp"
+            android:exported="false" />
+        <activity
+            android:name=".PasswordReset"
+            android:exported="false" />
+        <activity
+            android:name=".Login"
+            android:exported="false" />
+        <activity
+            android:name=".EnterCode"
+            android:exported="false" />
+        <activity
+            android:name=".ChangePasswordSuccess"
+            android:exported="false" />
+        <activity
+            android:name=".ChangePassword"
+            android:exported="false" />
+        <activity
+            android:name=".Entry"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +38,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".HomePage"
+            android:exported="false" />
     </application>
 
 </manifest>
